--- a/vap/conf/default_config.yaml
+++ b/vap/conf/default_config.yaml
@@ -76,6 +76,7 @@ trainer:
   default_root_dir: null
   max_epochs: 20
   limit_train_batches: 1.0
+  val_check_interval: 0.25
   fast_dev_run: false
   gradient_clip_val: 5.0
   logger:
