--- a/vap/conf/default_config.yaml
+++ b/vap/conf/default_config.yaml
@@ -76,7 +76,7 @@ trainer:
   default_root_dir: null
   max_epochs: 20
   limit_train_batches: 1.0
-  val_check_interval: 0.25
+  val_check_interval: 0.5
   fast_dev_run: false
   gradient_clip_val: 5.0
   logger:
@@ -96,3 +96,15 @@ trainer:
     monitor: val_loss
     mode: min
     patience: 5
+  - _target_: vap.callbacks.VADMaskCallback
+    probability: 0.5
+    sample_rate: 16000
+    frame_hz: 50
+    on_train: true
+    on_val: false
+    on_test: false
+  - _target_: vap.callbacks.FlipChannelCallback
+    probability: 0.5
+    on_train: true
+    on_val: false
+    on_test: false
